feat: disponibilizando exemplo requisições

--- a/apps/auth/.env.template
+++ b/apps/auth/.env.template
@@ -1,9 +1,9 @@
-PORT=3001
+PORT=
 
-JWT_EXPIRATION=3600
-JWT_SECRET=examplecodigojwt
+JWT_EXPIRATION=
+JWT_SECRET=
 
-MONGODB_URI=mongodb://root:password123@mongodb-primary:27017/
+MONGODB_URI=
 
-RABBIT_MQ_URI=amqp://rabbitmq:5672
-RABBIT_MQ_AUTH_QUEUE=exampleauth
+RABBIT_MQ_URI=
+RABBIT_MQ_AUTH_QUEUE=
