--- a/apps/orders/.env.template
+++ b/apps/orders/.env.template
@@ -1,5 +1,5 @@
-MONGODB_URI=mongodb://root:password123@mongodb-primary:27017/
-PORT=3000
-RABBIT_MQ_URI=amqp://rabbitmq:5672
-RABBIT_MQ_BILLING_QUEUE=billing
-RABBIT_MQ_AUTH_QUEUE=auth
+MONGODB_URI=m
+PORT=
+RABBIT_MQ_URI=
+RABBIT_MQ_BILLING_QUEUE=
+RABBIT_MQ_AUTH_QUEUE=
